sandc/test/fixtures/astRegression/shouldSucceed/productions/statement/ThrowStatement.sand
pub class ThrowStatement {
    foo() {
        throw a;

        throw if cond {
            foo();
            a
        } else {
            b
        };
    }
}