sandc/test/fixtures/astRegression/shouldFail/productions/ifPseudex/ElseIfBlockStatement.sand
pub class ElseIfBlockStatement {
    foo() {
        let a = if cond {
            b
        } else if cond {
            foo();
        } else {
            b
        };
    }
}